# Revolut-TaxReport

./: .gitignore  README.md  main.py  pyproject.toml
cases/anonymous_2025/: config.toml
cases/anonymous_2025/input/: trading-account-statement_2025-03-24_2025-12-31_en-us_anon01.csv  trading-pnl-statement_2025-03-24_2025-12-31_en-us_anon02.csv
cases/synthetic_carryover/: config.toml
cases/synthetic_carryover/input/: opening_cash.csv  opening_positions.csv  trading-account-statement_2025-01-01_2025-12-31_synth.csv  trading-pnl-statement_2025-01-01_2025-12-31_synth.csv
data/: README.md  ade_country_codes.csv  bdi_daily_eur.csv  bdi_monthly_eur.csv  fetch_bdi_rates.py
src/foglio_calcoli/: __init__.py  __main__.py  cli.py  common.py  config.py  engine.py  lots.py  models.py  parsing.py  quadri.py  rates.py  report.py  validate.py
src/foglio_calcoli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
viz/: Foglio_Calcoli.ipynb  build_notebook.py
